--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,61 @@
-.App {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+ul, ol {
+  list-style-type: none;
+}
+
+a, a:hover {
+  text-decoration: none;
+  display: inline-block;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+  margin: 0;
+  padding: 0;
+  line-height: 0.8;
+}
+
+.clr {
+  clear: both;
+}
+body{
+  background-color: rgb(215, 252, 252);
+  margin: 30px 20px;
+}
+.app-title{
   text-align: center;
+  color: teal;
+  font-weight: bold;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.card-parent{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap; /* Allow the cards to wrap if there's not enough space */
+  justify-content: center; /* Center the cards horizontally */
+}
+.card{
+  width: 250px;
+  margin: 15px 15px;
+  padding: 20px 15px;
+  background: white;
+}
+.card dt span{
+  display: block;
+  text-align: center;
+  margin: 10px 0px;
+}
+.icon-title{
+  color: teal;
+  font-size: 18px;
+}
+ dl dd{
+  line-height: 17px; 
+  text-align: justify;
+  color: #767272;
+  font-size: 16px;
+  
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
